--- a/client/index.html
+++ b/client/index.html
@@ -1,21 +1,50 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="cbook">
+<html lang="en">
+
 <head>
     <base href="/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
+    <style>
+        .list-group-controlls {
+            position: absolute;
+            bottom: 0;
+            right: 0;
+        }
+    </style>
     <title>CBOOK</title>
 </head>
-<body>
-    <div id="root" ng-view></div>
+
+<body ng-app="cbook">
+    <nav class="navbar navbar-inverse navbar-static-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="/">
+                    CBOOK
+                </a>
+            </div>
+        </div>
+    </nav>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-6 col-xs-offset-3">
+                <div class="page-header">
+                    <h1>Contacts</h1>
+                </div>
+                <ui-view></ui-view>
+            </div>
+        </div>
+    </div>
 
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular-route.js"></script>
+    <script src="//unpkg.com/angular-ui-router@1.0.3/release/angular-ui-router.min.js"></script>
     <script src="/app/api.service.js"></script>
     <script src="/app/components/contact/contact.component.js"></script>
     <script src="/app/components/contacts/contacts.component.js"></script>
-    <script src="/app/src.js"></script>
+    <script src="/app/index.js"></script>
 </body>
+
 </html>
